# ObjProg_Ver2

./: .gitignore  README.md
project_root/: CMakeLists.txt  Doxyfile  compile_cmake.cmd  setup.iss  testavimo_komandos.txt
project_root/doxy/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  actions_8md.html  advanced_8md.html  assertions_8md.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_child_class_with_stream_operator.html  class_child_class_without_stream_operator.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  class_construct_from_t-members.html  class_construct_from_t.html  class_container_test-members.html  class_container_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_custom_function_naming_test.html  class_custom_functor_naming_test.html  class_custom_integer_naming_test.html  class_custom_lambda_naming_test.html  class_custom_struct_naming_test.html  class_derived_test-members.html  class_derived_test.html  class_detect_not_instantiated_test-members.html  class_detect_not_instantiated_test.html  class_detect_not_instantiated_types_test-members.html  class_detect_not_instantiated_types_test.html  class_disabled_test.html  (+1560 more)
project_root/doxy/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_compiler_id_8c_source.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_c_x_x_compiler_id_8cpp_source.tex  _list___biblioteka_8h.tex  _list___biblioteka_8h_source.tex  _list__failo__apdorojimas_8cpp.tex  _list__failo__apdorojimas_8h.tex  _list__funkcijos_8cpp.tex  _list__funkcijos_8h_source.tex  _list__studentas_8cpp.tex  _vec___biblioteka_8h_source.tex  _vec__failo__apdorojimas_8cpp.tex  _vec__failo__apdorojimas_8h.tex  _vec__funkcijos_8cpp.tex  _vec__generuoti__failus_8cpp_source.tex  annotated.tex  class_bar_environment.tex  class_base.tex  class_biggest_int_convertible.tex  class_child_class_with_stream_operator.tex  class_child_class_without_stream_operator.tex  class_comment_test.tex  (+855 more)
project_root/include/: Vec_funkcijos.h
project_root/src/: List_failo_apdorojimas.cpp  List_funkcijos.cpp  Vec_funkcijos_papildomos.cpp  Vec_generuoti_failus.cpp  compile_gpp.cmd  studentas.cpp  test_Studentas.cpp
project_root/tests/: test_list_funkcijos.cpp  test_main.cpp  test_studentas.cpp  test_vec_funkcijos.cpp  test_zmogus.cpp
(+179 files in other folders)
